# suck

./: .gitignore  CHANGELOG  CONTENTS  Makefile.in  README  README.Gui  README.Xover  active.c  active.h  batch.c  batch.h  both.c  both.h  both_phrases.c  chkhistory.c  chkhistory.h  chkhistory_db.c  config.h.in  configure  configure.ac  configure.in  db.c  db.h  dedupe.c  dedupe.h  killfile.c  killfile.h  killprg.c  lmove-config  lmove.c  lmove_phrases.c  lpost.c  makephrases.c  queue.c  queue.h  read_db.c  rpost.c  rpost_phrases.c  ssort.c  ssort.h  (+13 more)
java/: README  Suck.java
man/: lmove.1  lpost.1  rpost.1  suck.1  testhost.1
perl/: README  header.pl
sample/: get.news.generic  get.news.inn  killprg_child.c  killxover_child.c  perl_kill.pl  perl_xover.pl  post_filter.pl  put.news  put.news.pl  put.news.sm  put.news.sm.pl  suckkillfile.sample  sucknewsrc.sample  suckothermsgs.sample
