dnl Process this file with autoconf to produce a configure script.
dnl Autoconfigure input file for suck

AC_INIT(suck.c)
AC_CONFIG_HEADER(config.h)

# we want these before the checks, so the checks can modify their values
test -z "$CFLAGS" && CFLAGS=-O2 AC_SUBST(CFLAGS)
test -z "$LDFLAGS" && LDFLAGS=-s AC_SUBST(LDFLAGS)

AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_SUBST(GCC)

dnl Checks for libraries.
AC_CHECK_LIB(nsl, gethostbyname)
AC_CHECK_LIB(socket, socket)
AC_CHECK_LIB(socks, Rconnect)
AC_CHECK_LIB(socks5, SOCKSconnect)
AC_CHECK_LIB(cV, fprintf)
AC_CHECK_LIB(ssl, SSL_get_error)

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h sys/time.h unistd.h limits.h regex.h sys/select.h net/socket.h arpa/inet.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_HEADER_TIME

dnl Checks for library functions.
AC_TYPE_SIGNAL
AC_CHECK_FUNCS(gettimeofday select strerror memmove setvbuf sigaction)

#AC_OUTPUT(Spanish.docs/Makefile Makefile, echo timestamp > stamp-h)
AC_OUTPUT(Makefile, echo timestamp > stamp-h)
